fix: click form submission in firefox and guesses spacing

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
-  width: 80%;
+  width: 1336px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -210,27 +210,27 @@ dialog {
 .guesses {
   width: 100%;
   height: 100%;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  background-color: var(--secondary-black);
-  border-radius: 1rem;
+  padding: 1rem;
   animation: emerge 300ms ease-in-out;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .answer {
+  width: 85%;
+  margin-top: 1rem;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-between;
   gap: 0.5rem;
-  font-size: 1.2rem;
   font-weight: 500;
 }
 
 .square {
-  flex-basis: calc(15% - 0.5rem);
-  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: calc(20% - 0.5rem);
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.15);
 }
 
 @keyframes emerge {
